refactor: 系统分析文件更名（强迫症福音），增补21年资料

--- a/系统分析/21年11月24日考试内容回忆.md
+++ b/系统分析/21年11月24日考试内容回忆.md
@@ -5,7 +5,8 @@
 4. 分析模型和设计模型的区别
 
 二、改错题 15分
-属地港航所申请用例图，原题
+属地港航所申请用例图，原题  
+![image](./21年改错图.png)
 
 三、建模题 35分
 学生选课，系统检查课程是否冲突、且学生课时是否是否足够，都满足条件就通知学生选课成功
