add: 遗忘的选择题

--- a/设计模式/24年12月26号考试内容回忆.md
+++ b/设计模式/24年12月26号考试内容回忆.md
@@ -9,10 +9,11 @@
 
 1. 女娲造人是什么模式？
 2. 关注一系列产品的接口，用什么模式？
-3. 多态是什么原则或方法的体现？
-4. 下图是什么模式？（桥接模式图）
+3. 设计模式是为了提高软件的什么质量属性？
+4. 多态是什么原则或方法的体现？
+5. 下图是什么模式？（桥接模式图）
 
-（还有一题忘了）
+
 
 
 
