--- a/组合数学/25年1月8日考试内容回忆.md
+++ b/组合数学/25年1月8日考试内容回忆.md
@@ -42,4 +42,4 @@ void red_blue_hanoi(int n, char source, char red_target, char blue_target)
 }
 ```
 
-![[25年1月8日汉诺塔示意.png]]
+![img](25年1月8日汉诺塔示意.png)
