--- a/并行与分布式计算/25年6月19日考试内容回忆.md
+++ b/并行与分布式计算/25年6月19日考试内容回忆.md
@@ -24,7 +24,7 @@
 
 6. 给出一个程序中Load、Store、分支、整数加法、整数移位、乘法指令的占比，和所需周期，（1）计算平均CPI （2）B机器时钟频率为1.2倍，但乘法指令周期改变为xxx，问哪个快
 
-7. 程序 `for(int i = 0; i < 1024; i++) sum += x[i]` ，其中 x 数组为1024个整数，给出汇编指令大致如下，LOAD指令cache hit 2周期，cache miss 100周期，ADD和CMP指令 1周期，BL 4周期，LOAD指令的后续指令若不是LOAD或与要加载的值无依赖可以继续发射（在这题中R2,R3都无依赖，意思可能是cache hit时2周期可以掩盖R2的1周期，cache miss时可以掩盖掉这两个，再后一条有依赖必需等待LOAD），给定 cache 大小 32KB，cache line大小128B
+7. 程序 `for(int i = 0; i < 1024; i++) sum += x[i]` ，其中 x 数组为1024个整数，给出汇编指令大致如下，LOAD指令cache hit 2周期，cache miss 100周期，ADD和CMP指令 1周期，BL 4周期，LOAD指令的后续指令若不是LOAD或与要加载的值无依赖可以继续发射（在这题中R2,R3都无依赖，意思可能是cache hit时2周期可以掩盖R2的1周期，cache miss时可以掩盖掉这两个，再后一条有依赖必需等待LOAD），给定 cache 大小 32KB，cache line大小128B，主频 500MHz
 ```assembly
 # R1数组元素，R2数组指针，R3 i，R4数组和
 LOOP:
@@ -35,8 +35,8 @@ LOOP:
 	CMP   R3,1024
 	BL    LOOP      # branch if less than
 ``` 
-（1）处理器A，无分支预测，估计执行时间
-（2）处理器B，1bit 分支预测器，预测成功分支指令不耗时，预测失败 4周期，第一次预测默认失败，估计执行时间，计算相对A加速比
+（1）无分支预测，估计执行时间
+（2）处理器B，1bit 分支预测器，预测成功分支指令不耗时，预测失败 4周期，第一次预测默认失败，其他一致，估计执行时间，计算相对A加速比
 
 8. 某个任务 $2^n$ 图，分解任务耗时1，计算耗时c，合并耗时与规模相当，给出规模 $2^3$ 任务图示如下
 （1）总任务量、关键路径、加速比
