--- a/系统分析/25年12月26日考试回忆.md
+++ b/系统分析/25年12月26日考试回忆.md
@@ -14,7 +14,7 @@
 ##### 二、填空题
 ![](./25年题图.png)
 
-给了一张顺序图(时序图)，8问
+给了一张顺序图(时序图)，9问
 
 1、A是什么？
 
@@ -30,7 +30,9 @@
 
 7、Why A is through D underlined?
 
-8、Which of the following is an INVALID sequence of messages, according to the diagram?
+8、If this system represented part of a web site, what would B most likely represent?
+
+9、Which of the following is an INVALID sequence of messages, according to the diagram?
 A.	1, 1.1, 1.1.1, 1.1.2, 1.1.3, 1.1.4, 1.1.4.1
 B.	1, 1.1, 1.1.1, 1.1.2, 1.1.3, 1.1.4, 1.1.4.1, 1.1.5, 1.1.5.1
 C.	1, 1.1, 1.1.1, 1.1.2, 1.1.3, 1.1.5, 1.1.5.1
@@ -53,5 +55,6 @@ C.	1, 1.1, 1.1.1, 1.1.2, 1.1.3, 1.1.5, 1.1.5.1
 
 一个客户关系系统,介绍indicator of customer credit rating?
 以两个indicators为例，绘制applied model并描述
+
 
 
